--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "M3-T3_desarrollo_pwa",
-    "author": "ging-moocs",
+    "name": "PWA_prueba",
+    "author": "Fazeludox",
     "license": "GNU",
     "version": "0.0.0",
     "keywords": [
